# corne-colemak-dh-eurkey

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prek.toml  .yamllint.yaml  CLAUDE.md  LAYOUT_OPTIMIZATION.md  LICENSE  README.md  flake.nix  keymap-drawer.yaml  result
.github/workflows/: firmware-ci.yml  layout-images-ci.yml
firmware/: corne_nwwy.vil  corne_v4-1_46_keebart_vial.uf2  corne_v4-1_custom.vil  corne_v4-1_custom_hrmods.json  corne_v4-1_custom_hrmods.vil  corne_v4-1_custom_hrmods.vil.backup  corne_v4-1_custom_hrmods.vil.backup-pre-merge  corne_v4-1_custom_hrmods.yaml
keyboards/crkbd/keymaps/custom_hrmods/: README.md  config.h  keymap.c  rules.mk  vial.json
keyboards/crkbd/keymaps/custom_hrmods/features/: bilateral_combinations.c  bilateral_combinations.h
scripts/: act-check.sh  build  colors.sh  test-all.sh  test-configs.sh  test-layouts.sh  validate-coverage.py  validate-coverage.sh  validate-vial.sh
tools/vil2json/: .gitignore  Cargo.toml
tools/vil2json/src/: main.rs
