[package]
name = "vil2json"
version = "0.1.0"
edition = "2021"
authors = ["Felix Schausberger"]
description = "Convert VIAL .vil keyboard layout files to QMK keymap.json format"
license = "MIT"
repository = "https://github.com/schausberger/corne-colemak-dh-eurkey"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
